# Bife

./: .env.example  .gitignore  App.tsx  AppSimple.tsx  AppWorking.tsx  App_new.tsx  App_old.tsx  App_working.tsx  CRITICAL_MODAL_RATE_FIX.md  EXCHANGE_RATE_FIX_COMPLETED.md  IMPLEMENTATION_SUMMARY.md  JUPITER_DEVNET_INVESTIGATION.md  MODAL_SYNC_COMPLETION.md  POOL_CREATION_SUCCESS.md  RAYDIUM_INTEGRATION_SUCCESS.md  RAYDIUM_POOL_FIX.md  RAYDIUM_TRADING_COMPLETE.md  README.md  README_new.md  README_old.md  SOLANA_DEPLOYMENT_SUCCESS.md  SYNTAX_FIX_SUMMARY.md  TRADING_INTERFACE_SUMMARY.md  UI_LAYOUT_MODAL_FIX.md  WALLET_CONNECTION_UPGRADE.md  WALLET_TESTING_GUIDE.md  android-bundle.js  app.json  babel.config.js  dexswap_principle.md  index.js  index.web.js  ios-bundle.js  metro.config.js  package-lock.json  package.json  raydium-integration.md  raydiumLP.md  react-native.config.js  tsconfig.json  (+1 more)
.github/instructions/: yarn.instructions.md
android/: BIFE-v1.1.0-release.apk  build.gradle  gradle.properties  set-gemini-key.sh  settings.gradle
android/app/: build.gradle  build_new.gradle  (+2 more)
components/: ShibaViewer.tsx
solana-tokens/: Anchor.toml  README.md  bife-integration.js  deploy-tokens.sh  jupiter-submission-guide.json  jupiter-token-list.json  mock-liquidity-pools.json  package.json  token-addresses-new.json  token-addresses.json  tsconfig.json  wallet-keypair.json
solana-tokens/programs/mock-bonk/: Cargo.toml
solana-tokens/programs/mock-bonk/src/: lib.rs
solana-tokens/programs/mock-usdc/: Cargo.toml
solana-tokens/programs/mock-usdc/src/: lib.rs
(+37 files in other folders)
