[package]
name = "mock-bonk"
version = "0.1.0"
description = "Mock BONK token for BIFE DeFi app testing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_bonk"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
