[package]
name = "mock-usdc"
version = "0.1.0"
description = "Mock USDC token for BIFE DeFi app testing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_usdc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
